# proxy-crm

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  README.md  pyproject.toml  requirements.txt  requirements.yml  workflowTA.drawio
.env/: pylupdate5.bat  pyrcc5.bat  pyuic5.bat
.env/Scripts/: fonttools-script.py  jsonpointer  normalizer-script.py  numba-script.py  pyftmerge-script.py  pyftsubset-script.py  pytest-script.py  sip-build-script.py  sip-distinfo-script.py  sip-install-script.py  sip-module-script.py  sip-sdist-script.py  sip-wheel-script.py  ttx-script.py
.env/conda-meta/: asttokens-2.2.1-pyhd8ed1ab_0.json  backcall-0.2.0-pyh9f0ad1d_0.json  backports-1.0-pyhd8ed1ab_3.json  backports.functools_lru_cache-1.6.5-pyhd8ed1ab_0.json  brotli-1.0.9-hcfcfb64_9.json  brotli-bin-1.0.9-hcfcfb64_9.json  brotli-python-1.0.9-py311h12c1d0e_9.json  bzip2-1.0.8-h8ffe710_4.json  ca-certificates-2023.7.22-h56e8100_0.json  certifi-2023.7.22-pyhd8ed1ab_0.json  charset-normalizer-3.2.0-pyhd8ed1ab_0.json  colorama-0.4.6-pyhd8ed1ab_0.json  comm-0.1.3-pyhd8ed1ab_0.json  contourpy-1.1.0-py311h005e61a_0.json  cycler-0.11.0-pyhd8ed1ab_0.json  debugpy-1.6.7-py311h12c1d0e_0.json  (+132 more)
data/: UNISIM_BHP.xlsx  UNISIM_CWI.xlsx  UNISIM_INJ.xlsx  UNISIM_OIL.xlsx  UNISIM_PROD.xlsx  UNISIM_TIME.xlsx  UNISIM_WOR.xlsx  bhp.xlsx  inj.xlsx  prod.xlsx  q_oil.xlsx  welldata.xlsx  wholedata.xlsx
main/: exampleCase.ipynb  fractionalFlow.py  interwellVis.py  norneCase.ipynb  proxy_crm_modules.py  unisimCase.ipynb  volveCase.ipynb
proxy_crm/: __init__.py  fractionalFlow.py
src/: lib.rs
(+21 files in other folders)
