[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "proxy_crm"
version = "0.2.0"
authors = [name::"Leony",
           email::"le.leony00@gmail.com"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
repository = "https://github.com/leleony/proxy_crm"

[tool.maturin]
features = ["pyo3/extension-module"]
bindings = "pyo3"
python-source = "python"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "proxy_crm"
version = "0.2.0"
description = "History matching using Proxy Capacitance-Resistance Model (Gubanova et al., 2022) for producer well shut-in"
authors = ["Leony <le.leony00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
